--- a/requirements.txt
+++ b/requirements.txt
@@ -25,3 +25,10 @@ pydantic>=2.5.0
 # Testing
 pytest>=7.4.0
 pytest-asyncio>=0.21.0
+
+# RAG - Lightweight (no heavy ML models)
+chromadb==0.4.22
+langchain-chroma>=0.1.0
+
+# PDF Support
+pypdf>=3.17.0
